@@ -23,6 +23,9 @@ BUGFIXES:
 
   ZOOKEEPER-309. core dump using zoo_get_acl() (mahadev via phunt)
 
+  ZOOKEEPER-341.  regression in QuorumPeerMain, tickTime 
+  from config is lost, cannot start quorum (phunt via mahadev)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-279. Allow specialization of quorum config parsing
